--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.testing.FirstFragment"
+        android:name="com.example.Drizzle.FirstFragment"
         android:label="fragment_first"
         tools:layout="@layout/fragment_first" />
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.testing.secondFragment"
+        android:name="com.example.Drizzle.secondFragment"
         android:label="fragment_second"
         tools:layout="@layout/fragment_second" />
     <fragment
         android:id="@+id/thirdFragment"
-        android:name="com.example.testing.ThirdFragment"
+        android:name="com.example.Drizzle.ThirdFragment"
         android:label="fragment_third"
         tools:layout="@layout/fragment_third" />
 </navigation>
