--- a/app/src/main/res/values/genderArrays.xml
+++ b/app/src/main/res/values/genderArrays.xml
@@ -57,4 +57,10 @@
         <item>Computer Science</item>
     </string-array>
 
+    <string-array name="groupSize">
+        <item>small</item>
+        <item>medium</item>
+        <item>large</item>
+    </string-array>
+
 </resources>
