--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,23 @@
     android:background="@drawable/gradient">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+
+        app:srcCompat="@drawable/drizzle_logo" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:layout_marginBottom="100dp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:textSize="40sp"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
