--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -7,7 +7,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/frameLayout"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".secondFragment">
+tools:context=".SecondFragment">
 
 <TextView
     android:id="@+id/textView4"
