--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.Drizzle.FirstFragment"
+        android:name="com.example.Drizzle.HomeFragment"
         android:label="fragment_first"
-        tools:layout="@layout/fragment_first" />
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.Drizzle.SecondFragment"
+        android:name="com.example.Drizzle.FriendsFragment"
         android:label="fragment_second"
-        tools:layout="@layout/fragment_second" />
+        tools:layout="@layout/fragment_friends" />
     <fragment
-        android:id="@+id/thirdFragment"
-        android:name="com.example.Drizzle.ThirdFragment"
-        android:label="fragment_third"
-        tools:layout="@layout/fragment_third" />
+        android:id="@+id/groupFragment"
+        android:name="com.example.Drizzle.GroupFragment"
+        android:label="fragment_Group"
+        tools:layout="@layout/fragment_group" />
 </navigation>
