--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -18,8 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Friends"
+        android:textColor="@android:color/secondary_text_light"
         android:textSize="30sp"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
