--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Groups"
+        android:textColor="@android:color/secondary_text_light"
         android:textSize="30sp"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
