--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Friends"
+        android:text="@string/Friends"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,9 +52,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Add Friend"
+        android:text="@string/addFriends"
 
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/recycleViewFriends"
