--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Groups"
+        android:text="@string/group"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Refresh"
+        android:text="@string/Refresh"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycleViewGroup" />
@@ -48,9 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Add Group"
+        android:text="@string/AddGroups"
 
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/recycleViewGroup"
@@ -62,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="44dp"
         android:layout_marginBottom="8dp"
-        android:text="Find Groups"
+        android:text="@string/FindGroup"
         app:layout_constraintBottom_toTopOf="@+id/recycleViewGroup"
         app:layout_constraintEnd_toStartOf="@+id/addGroupButton"
         app:layout_constraintHorizontal_bias="0.244"
