--- a/app/src/main/res/layout/verify_popup.xml
+++ b/app/src/main/res/layout/verify_popup.xml
@@ -17,5 +17,5 @@
         android:id="@+id/btnVerify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Verify Code" />
+        android:text="@string/verify" />
 </LinearLayout>
