--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -12,34 +12,38 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Groups"
-        android:textColor="@android:color/secondary_text_light"
-        android:textSize="30sp"
+        android:layout_marginTop="24dp"
+        android:text="@string/group"
+        android:textColor="@color/white"
+        android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.102"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewGroup"
-        android:layout_width="364dp"
+        android:layout_width="370dp"
         android:layout_height="395dp"
         android:layout_marginTop="88dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.081"
+        android:background="@color/transparent"/>
 
     <Button
         android:id="@+id/refreshButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Refresh"
+        android:layout_marginTop="52dp"
+        android:background="@drawable/full_round"
+        android:text="@string/Refresh"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycleViewGroup" />
 
@@ -48,10 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="Add Group"
-
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/full_round"
+        android:text="@string/AddGroups"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/recycleViewGroup"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -61,11 +64,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="44dp"
-        android:layout_marginBottom="8dp"
-        android:text="Find Groups"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/full_round"
+        android:text="@string/FindGroup"
         app:layout_constraintBottom_toTopOf="@+id/recycleViewGroup"
         app:layout_constraintEnd_toStartOf="@+id/addGroupButton"
-        app:layout_constraintHorizontal_bias="0.244"
+        app:layout_constraintHorizontal_bias="0.247"
         app:layout_constraintStart_toStartOf="parent" />
 
 
