--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -11,7 +11,7 @@
         />
     <item
         android:id="@+id/firstFragment"
-        android:icon="@drawable/drizzle_logo"
+        android:icon="@drawable/logo"
         android:title="Home" />
 
 
