1. Update the activity_addUser, it can be a user profile page right now

--- a/app/src/main/res/values/genderArrays.xml
+++ b/app/src/main/res/values/genderArrays.xml
@@ -63,4 +63,16 @@
         <item>large</item>
     </string-array>
 
+    <string-array name="courseList">
+        <item>empty</item>
+        <item>medium</item>
+        <item>large</item>
+    </string-array>
+
+    <string-array name="personality">
+        <item>Outgoing</item>
+        <item>Neutral</item>
+        <item>Reserved</item>
+    </string-array>
+
 </resources>
