--- a/app/src/main/res/layout/item_text_message.xml
+++ b/app/src/main/res/layout/item_text_message.xml
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp">
+    <RelativeLayout
+        android:id="@+id/message_root"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:background="@drawable/rect_round_primary_colour">
+        <TextView
+            android:id="@+id/textView_message_text"
+            android:layout_width="wrap_content"
+            android:maxWidth="250dp"
+            android:minWidth="120dp"
+            android:layout_height="wrap_content"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="4dp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+            tools:text="doesntmatter" />
+        <TextView
+            android:id="@+id/textView_message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView_message_text"
+            android:layout_alignEnd="@id/textView_message_text"
+            android:layout_marginEnd="8dp"
+            android:textSize="12sp"
+            tools:text="3/15/2018 3:00 PM"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/textView_message_name"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/textView_message_text"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="33dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="21dp"
+            android:layout_toStartOf="@id/textView_message_text"
+            android:textSize="6sp"
+            tools:text="3/15/2018 3:00 PM" />
+    </RelativeLayout>
+</FrameLayout>
